--- a/index.Rmd
+++ b/index.Rmd
@@ -40,6 +40,7 @@ knitr::opts_chunk$set(include = TRUE, comment = NA, echo = TRUE,
                       fig.align = "center", out.width = '90%')
 library(here)
 library(knitr)
+library(readr)
 ```
 
 
